# blackswan

./: .gitignore
agents/: main.py  pyproject.toml
agents/agents/: agent.py  mcp2tools.py  react_agent.py  systemPrompt.py
agents/agents/tools/: addition_tool.py  main.py
app/: package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: ChatMessage.tsx  DefaultView.tsx  InputPrompt.tsx
mcp_server/: README.md  package.json
mcp_server/src/: index.ts
mcp_server/src/clients/: InsuranceApiClient.ts
mcp_server/src/types/: insurance.ts
server/: .gitignore  CLAUDE.md  jest.config.js  memo.ts  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: index.ts
server/src/application/repositories/: IBaseAgentImageRepository.ts  IBlockchainRepository.ts  IInsuranceCardRepository.ts  IRunAIAgent.ts  IVectorStore.ts
server/src/application/usecases/: InsuranceClaim.ts  ManageData.ts
server/src/infrastructure/mcp/: McpServer.ts
server/src/infrastructure/repositories/: InMemoryVectorStore.ts  MockBlockchainRepository.ts  PrismaBaseAgentImageRepository.ts  PrismaInsuranceCardRepository.test.ts  PrismaInsuranceCardRepository.ts
server/src/infrastructure/web/: InsuranceCardDto.test.ts  InsuranceCardDto.ts  InsuranceController.test.ts  InsuranceController.ts  app.ts  routes.test.ts  routes.ts
server/src/tests/mocks/: InMemoryInsuranceCardRepository.ts
